--- a/templates/images/image_viewer_page.html
+++ b/templates/images/image_viewer_page.html
@@ -9,7 +9,7 @@
             Clover
         </h2>
         {% comment %} <div id="clover-viewer" data-id="https://api.dc.library.northwestern.edu/api/v2/works/71153379-4283-43be-8b0f-4e7e3bfda275?as=iiif"></div> {% endcomment %}
-        <div id="clover-viewer" data-id="https://ds-live-temp-iiif.s3.eu-west-2.amazonaws.com/manifests/C11050044-manifest.json"></div>
+        {% comment %} <div id="clover-viewer" data-id="https://ds-live-temp-iiif.s3.eu-west-2.amazonaws.com/manifests/C11050044-manifest.json"></div>
     </div>
   </article> {% endcomment %}
 
