--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -54,3 +54,10 @@
     {% endif %}
   </div>
 </header>
+{% load account %}
+{% user_display user as user %}
+{% if request.user.is_authenticated %}
+  <p>Welcome, {{ user }}. <a href="{% url 'account_logout' %}">Sign out</a></p>
+{% else %}
+  <p><a href="{% url 'account_login' %}">Sign in</a> <a href="{% url 'account_signup' %}">Register</a></p>
+{% endif %}
