--- a/templates/base_page.html
+++ b/templates/base_page.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load alert_tags datalayer_tags wagtailimages_tags wagtailcore_tags %}
+{% load alert_tags wagtailimages_tags wagtailcore_tags %}
 
 {% comment %}
     Base template for rendering Wagtail page instances
@@ -20,10 +20,6 @@
     <meta property="og:image" content="{% firstof og_img.full_url teaser_img.full_url %}">
     <meta property="og:image:width" content="{% firstof og_img.width teaser_img.width %}">
     <meta property="og:image:height" content="{% firstof og_img.height teaser_img.height %}">
-{% endblock %}
-
-{% block extra_gtm_js %}
-    {% render_gtm_datalayer page %}
 {% endblock %}
 
 {% block header %}
